# devolutions-crypto

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  DevolutionsCryptoSwift.podspec  LICENSE-APACHE  Package.swift  README.md  README_RUST.md  azure-pipelines.yml
.cargo/: config.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz-extended.yml  release-nugets.yml  release-others.yml  release.yml
DevolutionsCrypto.xcframework/: Info.plist
DevolutionsCrypto.xcframework/ios-arm64/: libdevolutions_crypto_uniffi.dylib
DevolutionsCrypto.xcframework/ios-arm64_x86_64-simulator/: libdevolutions_crypto_uniffi.dylib
DevolutionsCrypto.xcframework/macos-arm64_x86_64/: libdevolutions_crypto_uniffi.dylib
Sources/devolutions_crypto_uniffiFFI/: module.modulemap
Tests/DevolutionsCryptoSwiftTests/: AsymmetricTests.swift  ConformityTests.swift  HashingTests.swift  SecretSharingTests.swift  SignatureTests.swift  SymmetricTests.swift
_plans/: secret-key-wrappers.md  secret-key.md
cli/: Cargo.toml
cli/src/: main.rs
devolutions-crypto/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  deny.toml  pyproject.toml
devolutions-crypto-cli/: Cargo.toml  README.md
devolutions-crypto-cli/src/: main.rs
devolutions-crypto-wayk/: Cargo.toml  README.md
devolutions-crypto-wayk/src/: lib.rs
devolutions-crypto-wayk/src/bastion/: fle.rs  key_derive.rs  key_exchange.rs  mod.rs
devolutions-crypto/.cargo/: config
devolutions-crypto/fuzz/: Cargo.toml
devolutions-crypto/fuzz/fuzz_targets/: argon2parameters_deserialization.rs  ciphertext_deserialization.rs  decrypt.rs  decrypt_asymmetric.rs  encrypt.rs  encrypt_asymmetric.rs  join_shares.rs  password_hash_deserialization.rs  private_key_deserialization.rs  public_key_deserialization.rs  verify_password.rs
devolutions-crypto/fuzz/fuzz_targets/ciphertext/: decrypt.rs  encrypt.rs
devolutions-crypto/fuzz/fuzz_targets/password_hash/: hash_password.rs  verify_password.rs
devolutions-crypto/fuzz/fuzz_targets/secret_sharing/: generate_shared_key.rs  join_shares.rs
devolutions-crypto/fuzz/fuzz_targets/utils/: base64_encode_url.rs  derive_key.rs  generate_key.rs  validate_header.rs
devolutions-crypto/ios/: Cargo.toml
devolutions-crypto/src/: argon2parameters.rs  enums.rs  error.rs  ffi.rs  header.rs  lib.rs  python.rs  script  utils.rs  wasm.rs
devolutions-crypto/src/ciphertext/: ciphertext_v1.rs  ciphertext_v2.rs  mod.rs
devolutions-crypto/src/data_blob/: header.rs  mod.rs  payload.rs
devolutions-crypto/src/data_blob/checksum/: checksum_v1.rs  mod.rs
devolutions-crypto/src/data_blob/ciphertext/: ciphertext_v1.rs  ciphertext_v2.rs  mod.rs
devolutions-crypto/src/data_blob/hash/: hash_v1.rs  mod.rs
devolutions-crypto/src/data_blob/key/: key_v1.rs  mod.rs
devolutions-crypto/src/data_blob/password_hash/: mod.rs  password_hash_v1.rs
devolutions-crypto/src/data_blob/shared_secret/: mod.rs  shared_secret_v1.rs
devolutions-crypto/src/dc_data_blob/: dc_header.rs  dc_payload.rs  mod.rs
devolutions-crypto/src/dc_data_blob/dc_ciphertext/: dc_ciphertext_v1.rs  dc_ciphertext_v2.rs  mod.rs
devolutions-crypto/src/dc_data_blob/dc_hash/: dc_hash_v1.rs  mod.rs
devolutions-crypto/src/dc_data_blob/dc_key/: dc_key_v1.rs  mod.rs
devolutions-crypto/src/key/: key_v1.rs  mod.rs
devolutions-crypto/src/password_hash/: mod.rs  password_hash_v1.rs
devolutions-crypto/src/secret_sharing/: mod.rs  secret_sharing_v1.rs
devolutions-crypto/src/signature/: mod.rs  signature_v1.rs
devolutions-crypto/src/signing_key/: mod.rs  signing_key_v1.rs
devolutions-crypto/tests/: conformity.rs  web.rs
devolutionscrypto/: .gitignore  Cargo.toml  wasm_build.bat  wasm_build.sh
devolutionscrypto/src/: devocrypto.rs  devocrypto_errors.rs  ffi.rs  lib.rs  utils.rs  wasm.rs
devolutionscrypto/src/dc_data_blob/: dc_ciphertext.rs  dc_hash.rs  dc_header.rs  dc_key.rs  dc_payload.rs  mod.rs
devolutionscrypto/src/dc_data_blob/dc_ciphertext/: dc_ciphertext_v1.rs  dc_ciphertext_v2.rs  mod.rs
devolutionscrypto/src/dc_data_blob/dc_hash/: dc_hash_v1.rs  mod.rs
devolutionscrypto/src/dc_data_blob/dc_key/: dc_key_v1.rs
devolutionscrypto/src/dc_versions_impl/: mod.rs
devolutionscrypto/src/dc_versions_impl/dc_hash_impl/: dc_hash_impl_v1.rs  mod.rs
devolutionscrypto/tests/: web.rs
dockers/: Dockerfile-linux
ffi/: Cargo.toml  devolutions-crypto.h
ffi/src/: lib.rs
fuzz/: Cargo.toml  run_all_fuzz_tests.sh  run_quick_test.sh
libDevolutionsCrypto.xcframework/: Info.plist
python/: CHANGELOG.md  Cargo.toml  PYPI_README.md  devolutions_crypto.pyi  pyproject.toml
python/src/: lib.rs  uniffi-bindgen.rs
src/: argon2parameters.rs  enums.rs  error.rs  header.rs  lib.rs  utils.rs  wasm.rs
src/ciphertext/: ciphertext_v1.rs  ciphertext_v2.rs  mod.rs
src/derive_encrypt/: kdf_encrypted_data_v1.rs  mod.rs
src/key/: key_v1.rs  mod.rs  secret_key_v1.rs
src/key_derivation/: key_derivation_v1.rs  (+2 more)
tests/: conformity.rs  web.rs
uniffi/devolutions-crypto-uniffi-dart/: Cargo.toml  build.rs
uniffi/devolutions-crypto-uniffi-dart/src/: ciphertext.rs  devolutions_crypto.udl  key.rs  lib.rs  password_hash.rs  secret_sharing.rs  signature.rs  signing_key.rs  utils.rs
wrappers/: devolutions-crypto.h
wrappers/csharp/tests/integration-tests/nugets/xamarin-ios/static-rust-lib/: Cargo.toml
wrappers/csharp/tests/integration-tests/nugets/xamarin-ios/static-rust-lib/src/: lib.rs
yaml-templates/: csharp-code-formatting-check.yml  csharp-integration-tests.yml  csharp-unit-tests-android.yml  csharp-unit-tests-ios.yml  csharp-unit-tests-linux.yml  csharp-unit-tests-macos.yml  csharp-unit-tests-windows.yml  native-build-linux.yml  native-build-macos.yml  native-build-windows.yml  nugets-linux.yml  nugets-macos.yml  nugets-windows.yml  python-build-linux.yml  python-build-macos.yml  python-build-windows.yml  python-unit-tests-linux.yml  python-unit-tests-macos.yml  python-unit-tests-windows.yml  rust-code-formatting-check.yml  safari-unit-tests.yml  source-publish.yml  webassembly-build.yml
(+560 files in other folders)
