[workspace]
package.version = "0.9.3"
members = [
  "cli",
  "ffi",
  "fuzz",
  "python",
  "uniffi/uniffi-bindgen",
  "uniffi/devolutions-crypto-uniffi",
  "uniffi/devolutions-crypto-uniffi/uniffi-builder-macro",
  ]

[workspace.dependencies]
uniffi = "0.29.1"

[package]
name = "devolutions-crypto"
version.workspace = true
authors = ["Philippe Dugre <pdugre@devolutions.net>", "Mathieu Morrissette <mmorrissette@devolutions.net>"]
edition = "2021"
readme = "README_RUST.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/devolutions/devolutions-crypto"
repository = "https://github.com/devolutions/devolutions-crypto"
description = "An abstraction layer for the cryptography used by Devolutions"
resolver = "2"

[lib]
name = "devolutions_crypto"
crate-type = ["cdylib", "rlib"]

[dependencies]
aead = { version = "0.5", features = ["stream"] }
aes = "0.8"
base64 = "0.22"
cbc = { version = "0.1.2", features = ["block-padding", "alloc"] }
byteorder = "1"
chacha20poly1305 = "0.10"
cfg-if = "1"
hmac = "0.12"
num_enum = "0.7"
pbkdf2 = { version = "0.12", default-features = false }
scrypt = { version = "0.11", default-features = false }
blahaj = { version = "0.6", default-features = false }
sha2 = "0.10"
strum = { version = "0.27", features = ["derive"] }
subtle = "2"
zeroize = { version = "1.8" }
rand = "0.9"
rand_08 = { package = "rand", version = "0.8" }
thiserror = "2.0.12"
typed-builder = "0.23.2"
rust-argon2 = { version = "3.0", default-features = false }

ed25519-dalek = { version = "2", features = [ "rand_core" ] }
x25519-dalek = { version = "2", features = [ "static_secrets" ] }

# used for fuzzing
# Version is pinned because newer version requires lifetime annotations
#   that isn't compatible with the header trait
arbitrary = { version = "0.4.7", features = ["derive"], optional = true }
blake3 = { version = "1.8", features = ["zeroize"] }
paste = "1.0.15"
dyn-clone = "1.0"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = { version = "0.2.100", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
js-sys = { version = "0.3.77", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
fuzz = ["arbitrary", "blahaj/fuzzing"]
wbindgen = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys"]

[dependencies.getrandom_v02]
package = "getrandom"
version = "0.2"
features = ["js", "wasm-bindgen"]