[package]
name = "devolutions-crypto-cli"
version = "0.1.0"
authors = ["Philippe Dugre <pdugre@devolutions.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devolutions-crypto = {path = "../devolutions-crypto"}
clap = "2.33.0"
base64 = "0.11.0"