[package]
name = "devolutions-crypto-wayk"
version = "0.1.0"
authors = ["Benoît CORTIER <benoit.cortier@fried-world.eu>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/devolutions/devolutions-crypto"
repository = "https://github.com/devolutions/devolutions-crypto"
description = "Cryptographic primitives for Wayk Bastion Data Source"

[dependencies]
hkdf = "0.10"
x25519-dalek = "1.1"
chacha20poly1305 = "0.7"
uuid = "0.8"
sha2 = "0.9"
rand = "0.8"
base64 = "0.13"
block-padding = "0.2"
zeroize = "1"

# FIXME: old `rand_core` for `x25519-dalek`
# Once `x25519-dalek` is updated this can be removed
# entirely (use `rand 0.8`).
rand_core = "0.5"

[dev-dependencies]
either = "1"

