[package]
name = "devolutions-crypto"
version = "0.7.1"
authors = ["Philippe Dugre <pdugre@devolutions.net>", "Mathieu Morrissette <mmorrissette@devolutions.net>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/devolutions/devolutions-crypto"
repository = "https://github.com/devolutions/devolutions-crypto"
description = "An abstraction layer for the cryptography used by Devolutions"

[lib]
name = "devolutions_crypto"
crate-type = ["cdylib", "rlib"]

[dependencies]
aead = "0.4.2"
aes = "0.7.4"
base64 = "0.13.0"
block-modes = "0.8.1"
byteorder = "1.4.2"
chacha20poly1305 = "0.8.0"
cfg-if = "1"
hmac = "0.11.0"
num_enum = "0.5.1"
pbkdf2 = { version = "0.8.0", default-features = false }
scrypt = { version = "0.7.0", default-features = false }
sharks = "0.5.0"
sha2 = "0.9.3"
strum = "0.21.0"
strum_macros = "0.21.1"
subtle = "2.4.0"
x25519-dalek = "1.1.1"
zeroize = "1.2.0"
zeroize_derive = "1.0.1"
rand = "0.8.4"

# Old version, imported for x25519_dalek
rand_core = "0.5.1"

# FIXME: https://docs.rs/getrandom/0.2.2/getrandom/#webassembly-support
# let `getrandom` know that JavaScript is available for our targets
# `getrandom` is not used directly, but by adding the right feature here
# it will be compiled with it in our dependencies as well (since union of
# all the features selected is used when building a Cargo project)
getrandom = { version = "0.2", features = ["js"] }
getrandom1 = { package = "getrandom", version = "0.1", features = ["wasm-bindgen"] }

# used for fuzzing
# Version is pinned because newer version requires lifetime annotations
#   that isn't compatible with the header trait
arbitrary = { version = "0.4.7", features = ["derive"], optional = true }

[build-dependencies]
cbindgen = "0.19"

[dependencies.pyo3]
optional = true
version = "0.14.1"
features = ["extension-module"]

[target.'cfg(target_arch="wasm32")'.dependencies]
rust-argon2 = { version = "0.8.2", default-features = false }
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"], optional = true }
js-sys = { version = "0.3.50", optional = true }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rust-argon2 = "0.8.2"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.10"

[features]
default = []
ffi = []
python = ["pyo3"]
fuzz = ["arbitrary", "sharks/fuzzing"]
wbindgen = ["wasm-bindgen", "js-sys"]

