[package]
name = "devolutionscrypto"
version = "0.1.0"
authors = ["Philippe Dugre <pdugre@devolutions.net>", "Mathieu Morrissette <mmorrissette@devolutions.net>"]
edition = "2018"
license = "BSD-3-Clause"

[lib]
name="devolutionscrypto"
crate-type = ["cdylib"]

[dependencies]
aes = "0.3.2"
block-modes = "0.3.1"
byteorder="1.2.7"
cfg-if = "0.1"
hmac = "0.7.0"
pbkdf2 = { version = "0.3", default-features = false }
sha2 = "0.8.0"
x25519-dalek = "0.5.1"
subtle = "2.0.0"
zeroize = "0.5.2"

[target.'cfg(target_arch="wasm32")'.dependencies]
rand = { version = "0.6.4", features = ["wasm-bindgen"] }
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }
wasm-bindgen = "0.2.33"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rand = { version = "0.6.4" }
libc = "0.2.47"
