[package]
name = "devolutionscrypto"
version = "0.1.1"
authors = ["Philippe Dugre <pdugre@devolutions.net>", "Mathieu Morrissette <mmorrissette@devolutions.net>"]
edition = "2018"
readme = "../README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/devolutions/devolutionscrypto"
repository = "https://github.com/devolutions/devolutionscrypto"
description = "An abstraction layer for the cryptography used by Devolutions"

[lib]
name="devolutionscrypto"
crate-type = ["cdylib"]

[dependencies]
aes = "0.3.2"
block-modes = "0.3.3"
byteorder="1.3.2"
cfg-if = "0.1.9"
hmac = "0.7.1"
pbkdf2 = { version = "0.3", default-features = false }
sha2 = "0.8.0"
x25519-dalek = "0.5.2"
subtle = "2.1.1"
zeroize = "0.10.1"
zeroize_derive = "0.10.0"

[target.'cfg(target_arch="wasm32")'.dependencies]
rand = { version = "0.6.4", features = ["wasm-bindgen"] }
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }
wasm-bindgen = "0.2.33"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rand = { version = "0.6.4" }

[[example]]
name = "static"
path = "src/lib.rs"
crate-type = ["staticlib"]
