[package]
name = "devolutionscrypto"
version = "0.2.0"
authors = ["Philippe Dugre <pdugre@devolutions.net>", "Mathieu Morrissette <mmorrissette@devolutions.net>"]
edition = "2018"
readme = "../README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/devolutions/devolutionscrypto"
repository = "https://github.com/devolutions/devolutionscrypto"
description = "An abstraction layer for the cryptography used by Devolutions"

[lib]
name="devolutionscrypto"
crate-type = ["cdylib", "rlib"]

[dependencies]
aes = "0.3.2"
block-modes = "0.3.3"
byteorder="1.3.2"
cfg-if = "0.1.10"
hmac = "0.7.1"
pbkdf2 = { version = "0.3.0", default-features = false }
sha2 = "0.8.0"
x25519-dalek = "0.5.2"
subtle = "2.2.1"
zeroize = "1.0.0"
zeroize_derive = "1.0.0"
base64 = "0.11.0"
chacha20poly1305 = "0.2.1"
aead = "0.1.1"

[target.'cfg(target_arch="wasm32")'.dependencies]
rand = { version = "0.6.4", features = ["wasm-bindgen"] }
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }
wasm-bindgen = "0.2.54"
js-sys = "0.3.31"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rand = { version = "0.6.4" }

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"

[[example]]
name = "static"
path = "src/lib.rs"
crate-type = ["staticlib"]
