[package]
name = "devolutions-crypto-python"
version = "0.9.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devolutions-crypto = { path = "../" }
zeroize = "1"
base64 = "0.21"
pyo3 = { version = "0.20", features = ["extension-module"] }
