[package]
name = "devolutions-crypto"
version = "0.7.0"
authors = ["Philippe Dugre <pdugre@devolutions.net>", "Mathieu Morrissette <mmorrissette@devolutions.net>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/devolutions/devolutions-crypto"
repository = "https://github.com/devolutions/devolutions-crypto"
description = "An abstraction layer for the cryptography used by Devolutions"

[lib]
name = "devolutions_crypto"
crate-type = ["staticlib"]
path = "../src/lib.rs"

[dependencies]
aead = "0.3.2"
aes = "0.6.0"
base64 = "0.13.0"
block-modes = "0.7.0"
byteorder = "1.4.2"
chacha20poly1305 = "0.7.1"
cfg-if = "1"
hmac = "0.10.1"
num_enum = "0.5.1"
pbkdf2 = { version = "0.7.2", default-features = false }
scrypt = { version = "0.6.1", default-features = false }
sharks = "0.4.3"
sha2 = "0.9.3"
subtle = "2.4.0"
rand = "0.8.3"
strum = "0.20.0"
strum_macros = "0.20.1"
x25519-dalek = "1.1.0"
zeroize = "1.2.0"
zeroize_derive = "1.0.1"
rust-argon2 = "0.8.2"

# FIXME: remove once x25519-dalek is updated
rand07 = { package = "rand", version = "0.7" }

[profile.release]
lto = true

[features]
default = []
ffi = []
