[package]
name = "devolutions-crypto"
version = "0.7.1"
authors = ["Philippe Dugre <pdugre@devolutions.net>", "Mathieu Morrissette <mmorrissette@devolutions.net>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/devolutions/devolutions-crypto"
repository = "https://github.com/devolutions/devolutions-crypto"
description = "An abstraction layer for the cryptography used by Devolutions"

[lib]
name = "devolutions_crypto"
crate-type = ["staticlib"]
path = "../src/lib.rs"

[dependencies]
aead = "0.4"
aes = "0.7"
base64 = "0.13"
block-modes = "0.8"
byteorder = "1"
chacha20poly1305 = "0.9"
cfg-if = "1"
ed25519-dalek = "1"
hmac = "0.11"
num_enum = "0.5"
pbkdf2 = { version = "0.9", default-features = false }
scrypt = { version = "0.8", default-features = false }
sharks = "0.5"
sha2 = "0.9"
strum = "0.22"
strum_macros = "0.22"
subtle = "2"
x25519-dalek = "1"
zeroize = "1"
zeroize_derive = "1"
rust-argon2 = "0.8"
rand = "0.8"

# Old version, imported for x25519_dalek
rand_core = "0.5"

[profile.release]
lto = true

[features]
default = []
ffi = []
