[package]
name = "devolutions-crypto-uniffi-dart"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
devolutions-crypto = { path = "../../" }
uniffi-builder-macro = { path = "../uniffi-builder-macro" }
uniffi = { git = "https://github.com/NiallBunting/uniffi-rs-dart.git" }

[build-dependencies]
uniffi = { git = "https://github.com/NiallBunting/uniffi-rs-dart.git",  features = ["build"] }
