[package]
name = "devolutions-crypto-uniffi-dart"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
devolutions-crypto = { path = "../../" }
uniffi-builder-macro = { path = "../uniffi-builder-macro" }
uniffi-dart = { git = "https://github.com/acterglobal/uniffi-dart.git" }

[build-dependencies]
uniffi-dart = { git = "https://github.com/acterglobal/uniffi-dart.git",  features = ["build"] }
