[package]
name = "static-rust-lib"
version = "0.1.0"
authors = ["Mathieu Morrissette <mmorrissette@devolutions.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[lib]
name="static_rust_lib"
crate-type = ["staticlib"]

[dependencies]

[profile.release]
lto = true
